2-apps/gtm-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gtm-server-deployment
  namespace: axanth-website-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gtm-server
  template:
    metadata:
      labels:
        app: gtm-server
    spec:
      imagePullSecrets:
      - name: gcr-cred
      containers:
      - name: gtm-server
        image: gcr.io/cloud-tagging-containers/server:2.2.0
        ports:
        - containerPort: 8080
