2-apps/gtm-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gtm-server-service
  namespace: axanth-website-ns
spec:
  selector:
    app: gtm-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
